--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/react-query": "^5.75.0",
     "framer-motion": "^12.9.2",
     "gsap": "^3.13.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.4"
